[package]
name = "glasgow-traceroute"
version = "0.1.0"
edition = "2024"
description = "A network traceroute tool written in Rust"
authors = ["Ryan Bramwell <ryan.bramwell.2022@uni.strath.ac.uk>"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
socket2 = { version = "0.6.1", features = ["all"] }
packet = "0.1.4"
ctrlc = "3.5.1"
local-ip-address = "0.6.5"
rand = "0.10.0-rc.5"
